src/objects/fferpcore__Sequence__mdt.object
<CustomObject>
    <description>Contains the numbering sequences that you can use for fields on your objects. You can specify the starting value of the sequence, a format made from static data, sequence parts, and leading zeros.</description>
    <fields>
        <fullName>fferpcore__Format__c</fullName>
        <description>Format of the number sequence to be placed in the field. You can specify static data, the index of a sequence part enclosed in curly brackets, and leading zeros enclosed in curly brackets.</description>
        <inlineHelpText>Format of the number sequence to be placed in the field. You can specify static data, the index of a sequence part enclosed in curly brackets, and leading zeros enclosed in curly brackets.</inlineHelpText>
        <label>Format</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ResetSequenceForParts__c</fullName>
        <description>A comma separated list of Sequence Part Indexes for which to reset to the Starting Value when the data returned by the Value field changes.</description>
        <inlineHelpText>A comma separated list of Sequence Part Indexes for which to reset to the Starting Value when the data returned by the Value field changes.</inlineHelpText>
        <label>Reset Sequence for Parts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartingValue__c</fullName>
        <description>The number from which to start the sequence.</description>
        <inlineHelpText>The number from which to start the sequence.</inlineHelpText>
        <label>Starting Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sequence</label>
    <pluralLabel>Sequences</pluralLabel>
</CustomObject>